--- a/Scipy05-scientific calculation.ipynb
+++ b/Scipy05-scientific calculation.ipynb
@@ -1996,6 +1996,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  图像处理：scipy.ndimage\n",
+    "from scipy import ndimage\n",
+    "from scipy import misc\n",
+    "import matplotlib.pyplot as pl"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
