--- a/Note14-USDA Food Database.ipynb
+++ b/Note14-USDA Food Database.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:26:16.446855Z",
+     "start_time": "2021-02-22T12:26:12.723690Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -22,7 +27,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:26:18.631902Z",
+     "start_time": "2021-02-22T12:26:17.902780Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -43,8 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:27:00.166236Z",
+     "start_time": "2021-02-22T12:27:00.143304Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -678,7 +693,7 @@
        "   'group': 'Other'}]}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,8 +704,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:27:25.541751Z",
+     "start_time": "2021-02-22T12:27:25.513826Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -894,7 +914,7 @@
        "   'group': 'Other'}]}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,8 +925,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:29:06.999550Z",
+     "start_time": "2021-02-22T12:29:06.977607Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -914,7 +939,7 @@
        "dict_keys(['id', 'description', 'tags', 'manufacturer', 'group', 'portions', 'nutrients'])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,8 +950,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:29:15.871461Z",
+     "start_time": "2021-02-22T12:29:15.849594Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -934,7 +964,7 @@
        "1008"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,8 +975,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:29:18.073433Z",
+     "start_time": "2021-02-22T12:29:18.058473Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -954,7 +989,7 @@
        "'Cheese, caraway'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,8 +1000,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:41:41.001254Z",
+     "start_time": "2021-02-22T12:41:40.990259Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -974,7 +1014,7 @@
        "[]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,8 +1025,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:41:42.520808Z",
+     "start_time": "2021-02-22T12:41:42.509839Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -994,7 +1039,7 @@
        "''"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,8 +1050,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:41:44.256753Z",
+     "start_time": "2021-02-22T12:41:44.232818Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1014,7 +1064,7 @@
        "'Dairy and Egg Products'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1025,8 +1075,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:41:45.362498Z",
+     "start_time": "2021-02-22T12:41:45.349384Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1034,7 +1089,7 @@
        "[{'amount': 1, 'unit': 'oz', 'grams': 28.35}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,8 +1100,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:41:53.609437Z",
+     "start_time": "2021-02-22T12:41:53.585470Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1665,7 +1725,7 @@
        "  'group': 'Other'}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1676,8 +1736,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:41:54.688323Z",
+     "start_time": "2021-02-22T12:41:54.676943Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1685,7 +1750,7 @@
        "162"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1696,8 +1761,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:41:55.775460Z",
+     "start_time": "2021-02-22T12:41:55.761499Z"
+    },
     "cell_style": "split"
    },
    "outputs": [
@@ -1710,7 +1779,7 @@
        " 'group': 'Composition'}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1721,8 +1790,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:41:59.008049Z",
+     "start_time": "2021-02-22T12:41:58.996081Z"
+    },
     "cell_style": "split"
    },
    "outputs": [
@@ -1735,7 +1808,7 @@
        " 'group': 'Composition'}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1746,8 +1819,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:42:00.633680Z",
+     "start_time": "2021-02-22T12:42:00.611733Z"
+    },
     "cell_style": "split"
    },
    "outputs": [
@@ -1843,7 +1920,7 @@
        "6  1573.00    kJ                       Energy       Energy"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1855,8 +1932,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:42:01.772421Z",
+     "start_time": "2021-02-22T12:42:01.743078Z"
+    },
     "cell_style": "split"
    },
    "outputs": [
@@ -1943,7 +2024,7 @@
        "4               "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1954,10 +2035,12 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 6636 entries, 0 to 6635\n",
       "Data columns (total 4 columns):\n",
-      "description     6636 non-null object\n",
-      "group           6636 non-null object\n",
-      "id              6636 non-null int64\n",
-      "manufacturer    5195 non-null object\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   description   6636 non-null   object\n",
+      " 1   group         6636 non-null   object\n",
+      " 2   id            6636 non-null   int64 \n",
+      " 3   manufacturer  5195 non-null   object\n",
       "dtypes: int64(1), object(3)\n",
       "memory usage: 207.5+ KB\n"
      ]
@@ -1972,8 +2055,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:42:36.442913Z",
+     "start_time": "2021-02-22T12:42:36.422966Z"
+    },
     "cell_style": "split"
    },
    "outputs": [
@@ -1984,8 +2071,8 @@
        "Beef Products                        618\n",
        "Baked Products                       496\n",
        "Breakfast Cereals                    403\n",
-       "Fast Foods                           365\n",
        "Legumes and Legume Products          365\n",
+       "Fast Foods                           365\n",
        "Lamb, Veal, and Game Products        345\n",
        "Sweets                               341\n",
        "Fruits and Fruit Juices              328\n",
@@ -1993,7 +2080,7 @@
        "Name: group, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2004,8 +2091,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:42:37.545745Z",
+     "start_time": "2021-02-22T12:42:37.532388Z"
+    },
     "cell_style": "split"
    },
    "outputs": [
@@ -2136,7 +2227,7 @@
        "[162 rows x 4 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2147,8 +2238,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:43:08.998053Z",
+     "start_time": "2021-02-22T12:43:02.447417Z"
+    }
+   },
    "outputs": [],
    "source": [
     "nutrients = []\n",
@@ -2161,8 +2257,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 30,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:43:51.197745Z",
+     "start_time": "2021-02-22T12:43:48.369716Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -16565,7 +16666,7 @@
        " ...]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16576,8 +16677,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:44:31.556083Z",
+     "start_time": "2021-02-22T12:44:30.458043Z"
+    },
     "cell_style": "center"
    },
    "outputs": [
@@ -16720,7 +16825,7 @@
        "[389355 rows x 5 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16732,8 +16837,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 32,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:47:06.018530Z",
+     "start_time": "2021-02-22T12:47:05.699591Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -16741,7 +16851,7 @@
        "14179"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16753,8 +16863,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-22T12:47:16.944586Z",
+     "start_time": "2021-02-22T12:47:16.915662Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -16895,7 +17010,7 @@
        "[375176 rows x 5 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18006,7 +18121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.6"
   },
   "pycharm": {
    "stem_cell": {
@@ -18030,7 +18145,45 @@
    "toc_section_display": true,
    "toc_window_display": false
   },
-  "toc-showtags": false
+  "toc-showtags": false,
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "oldHeight": 382.667,
+   "position": {
+    "height": "352.667px",
+    "left": "922px",
+    "right": "20px",
+    "top": "120px",
+    "width": "338px"
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "varInspector_section_display": "block",
+   "window_display": false
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
